Fix selection scss bleeding through selection menu

--- a/frontend/src/app/components/media-browser/media-browser.component.scss
+++ b/frontend/src/app/components/media-browser/media-browser.component.scss
@@ -26,7 +26,8 @@
 .media-browser__action-bar {
   position: sticky;
   top: 0;
-  z-index: 3;
+  z-index: 20;
+  isolation: isolate;
   display: flex;
   align-items: center;
   justify-content: space-between;
